[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "therapydrift"
version = "0.1.0"
description = "Workgraph sidecar for self-healing drift loops"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "speedrift-lane-sdk",
]

[project.scripts]
therapydrift = "therapydrift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["therapydrift*"]

[tool.uv.sources]
speedrift-lane-sdk = { git = "https://github.com/dbmcco/speedrift-lane-sdk.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
